fix archive dates alignment

--- a/site/css/style.less
+++ b/site/css/style.less
@@ -83,8 +83,10 @@ img {
 .olderpostdate {
     font-size: 0.8em;
     color : @detailColor;
-    width: 150px;
-    margin-right: 15px;
+    width: 65px;
+    margin-right: 10px;
+    display: inline-block;
+    text-align: end;
 }
 
 header {
